tests/paczka1/small_fuzzy/64973030.err
Error in line 4: k0TL A437 \7,5
Error in line 10: BtBLykk9d A294 56,9
Error in line 3: k0TL A437 27,6
